# nibble

./: AGENTS.md  Cargo.toml  FUTURE.md  FUTURE_PROMPTS.md  PLAN.md  README.md  install.sh  uninstall.sh
.claude/: CLAUDE.md  settings.json
.nibble/: setup.sh
.nibble/factory/: .gitignore
crons/: malone-daily-tasks.md  test-notify.md
docs/: cron.md  future.md  memory.md
extension/: nibble-memory.ts
scripts/: fix-native-messaging.sh  install-extension.sh  setup-auto-reset.sh  setup-claude-hooks.sh  setup-listen.sh  setup-llama-server.sh  setup-telegram.sh  setup-wrappers.sh  statusline-command.sh
skills/: README.md
skills/factory-adversarial/: SKILL.md
skills/factory-implement/: SKILL.md
skills/factory-lessons/: SKILL.md
skills/factory-pipeline/: SKILL.md
skills/factory-qa-gate/: SKILL.md
skills/factory-risk-score/: SKILL.md
skills/factory-spec/: SKILL.md
skills/factory-tdd/: SKILL.md
skills/factory-verify/: SKILL.md
skills/nibble-memory/: SKILL.md
src/: agent_input.rs  backup.rs  config.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cron/: mod.rs
src/db/: mod.rs
src/display/: mod.rs
src/memory/: archive.rs  cli.rs  format.rs  git.rs  index.rs  llm.rs  mod.rs  models.rs  search.rs  store.rs  summarize.rs  tests.rs
src/models/: mod.rs  task.rs
src/notifications/: mod.rs  telegram.rs  telegram_listener.rs
src/sandbox/: mod.rs  podman.rs
src/sandbox_instructions/: base.md  factory.md  general_principles.md
src/session/: mod.rs
wrappers/: TEMPLATE-wrapper  claude-wrapper  opencode-wrapper  test-agent-wrapper
(+11 files in other folders)
